syntax = "proto3";

package itemservice;

option go_package = "rancher-manager/api/proto/itemservice";

service ItemService {
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}

message GetItemRequest {
  string item_id = 1;
}

message GetItemResponse {
  bool success = 1;
  Item item = 2;
  string message = 3;
}

message UpdateStockRequest {
  string item_id = 1;
  int32 new_stock = 2;
}

message UpdateStockResponse {
  bool success = 1;
  Item item = 2;
  string message = 3;
}

message DeleteItemRequest {
  string item_id = 1;
}

message DeleteItemResponse {
  bool success = 1;
  string message = 2;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  int32 stock = 6;
  uint32 created_by = 7;
  uint32 updated_by = 8;
  string created_at = 9;
  string updated_at = 10;
} 